--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,21 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
-
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.1",
     "@mui/icons-material": "^7.3.1",
-
-    "axios": "^1.11.0",
+    "@mui/material": "^7.3.1",
+    "axios": "^1.13.5",
     "chart.js": "^4.5.0",
-    "react-chartjs-2": "^5.3.0"
+    "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.1"
   },
   "devDependencies": {
-    "vite": "^5.1.4",
-    "@vitejs/plugin-react": "^4.2.1"
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.1.4"
   }
 }
