Fix CORS for production

--- a/backend/.env
+++ b/backend/.env
@@ -10,5 +10,5 @@ JWT_EXPIRE=7d
 NODE_ENV=development
 
 # Frontend and Dashboard URLs (Fixed Vite ports)
-FRONTEND_URL=http://localhost:5173
-DASHBOARD_URL=http://localhost:5174
+FRONTEND_URL=https://stockyard-frontend-uuyr.onrender.com
+DASHBOARD_URL=https://stockyard-dashboard.onrender.com
