--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 10000 --host"
+    "preview": "vite preview --port 10000 --host",
+    "start": "serve -s dist -l 10000"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -20,6 +21,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
+    "serve": "^14.2.1",
     "vite": "^5.1.4"
   }
 }
