--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -6,22 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 10000 --host",
-    "start": "serve -s dist -l 10000"
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
-    "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.13.5",
     "chart.js": "^4.5.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
-    "serve": "^14.2.1",
+    "react-router-dom": "^7.8.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.1.4"
   }
 }
